# public-skills

./: .claudian  .gitignore  .obsidian  FINAL_REPOSITORY_SPLIT.md  LICENSE  PUBLIC_SKILLS_SANITIZATION_REPORT.md  PUBLIC_SKILLS_SETUP.md  README.md  REPOSITORY_SPLIT_SUMMARY.md  SANITIZATION_SUMMARY.md  SKILLS_INDEX.md  frontier-lab-news-digest.skill  sync-public.sh
scraper/: .gitignore  README.md  pyproject.toml
scraper/.tmp/raw_html/: 1019561_initial.html  1020796_initial.html  1021129_initial.html  1021798_initial.html  1023557_initial.html  1024061_initial.html  1024820_initial.html  1025247_initial.html  1026031_initial.html  1026731_initial.html  1026769_initial.html  1028322_initial.html  1029094_initial.html  1029094_legacy.html  1032811_initial.html  1032987_initial.html  1033479_initial.html  1038314_initial.html  1042788_initial.html  1043761_initial.html  1046157_initial.html  1047928_initial.html  1055197_initial.html  1058782_initial.html  1060896_initial.html  1061429_initial.html  1064682_initial.html  1066176_initial.html  1066364_initial.html  1067116_initial.html  1067183_initial.html  1068565_initial.html  1070043_initial.html  1070759_initial.html  1072711_initial.html  1072714_initial.html  1072912_initial.html  1072913_initial.html  1074759_initial.html  1074864_initial.html  (+207 more)
scraper/inputs/anthropic/: 12.html  13.html  14.html
scraper/inputs/databricks/: 1.html  databricks_2.html  db_10.html  db_5.html  db_8.html  db_9.html
scraper/inputs/harvey/: 1.html
scraper/outputs/anthropic/: anthropic_bq.md
scraper/tests/: test_post.py
(+1193 files in other folders)
