[project]
name = "scraper"
version = "0.1.0"
description = ""
authors = [
    {name = "Aaron Teng",email = "tengqian0001@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.12.3,<5.0.0",
    "requests>=2.32.3,<3.0.0",
    "ipykernel (>=7.2.0,<8.0.0)",
]

[project.scripts]
scrape-post = "scraper.cli:main"
scrape-company = "scraper.company:main"

[tool.poetry]
packages = [{include = "scraper", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)"
]
